--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,7 @@
 	path = sites/all/modules/devel
 	url = http://git.drupal.org/project/devel.git
 	branch = 7.x-1.x
+[submodule "sites/all/modules/features"]
+	path = sites/all/modules/features
+	url = http://git.drupal.org/project/features.git
+	branch = 7.x-2.x
